name:                taffybar-pagerhints
version:             0.1.0.0
-- synopsis:

homepage:            https://github.com/jocke-l/taffybar-pagerhints#readme
license:             BSD3
license-file:        LICENSE
author:              Joakim Saario
maintainer:          saario.joakim@gmail.com
category:            System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

description:
  This library consists of only pagerHints from taffybar to be used with
  xmonad when installed through stack.

library
  hs-source-dirs:      src
  exposed-modules:     System.Taffybar.Support.PagerHints
  build-depends:       base >= 4.7 && < 5
                     , utf8-string
                     , xmonad-contrib
                     , xmonad
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jocke-l/taffybar-pagerhints
